Fixed #28 - service install
This is a partial fix for install. Still fails for uninstall